--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "home/.emacs.d"]
 	path = home/.emacs.d
-	url = https://github.com/soruma/dot-emacs.d
+	url = https://github.com/soruma/dot-emacs.d.git
